[package]
name = "timeflippers"
authors = ["Bernd Zobl"]
version = "0.1.0"
edition = "2021"

[dependencies]
bluez-async = "0.7.2"
bytes = "1.4.0"
chrono = "0.4.26"
clap = { version = "4.3.11", features = ["derive"] }
env_logger = "0.10.0"
futures = "0.3.28"
log = "0.4.19"
thiserror = "1.0.40"
tokio = { version = "1.28.2", features = ["macros", "rt-multi-thread", "signal", "time"] }
uuid = "1.3.1"
