[package]
name = "timeflippers"
authors = ["Bernd Zobl"]
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.72"
bluez-async = "0.7.2"
bytes = "1.4.0"
chrono = "0.4.26"
clap = { version = "4.3.11", features = ["derive"] }
env_logger = "0.10.0"
futures = "0.3.28"
log = "0.4.19"
serde = { version = "1.0.171", features = ["derive"] }
thiserror = "1.0.40"
tokio = { version = "1.28.2", features = ["fs" ,"macros", "rt-multi-thread", "signal", "time"] }
toml = "0.7.6"
uuid = "1.3.1"
